{
  "version": 4,
  "terraform_version": "1.13.3",
  "serial": 5,
  "lineage": "0a0ac660-1685-cc76-eb11-d8256e36287a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "variables_demo",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:047719640457:security-group/sg-009539c0e32c8b9ed",
            "description": "testing variables in Terraform",
            "egress": [],
            "id": "sg-009539c0e32c8b9ed",
            "ingress": [],
            "name": "shwatech-variables",
            "name_prefix": "",
            "owner_id": "047719640457",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0032defb83402db23"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "047719640457",
            "id": "sg-009539c0e32c8b9ed",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:047719640457:security-group-rule/sgr-003cf68ca529aae27",
            "cidr_ipv4": "118.10.10.118/32",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-003cf68ca529aae27",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-009539c0e32c8b9ed",
            "security_group_rule_id": "sgr-003cf68ca529aae27",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "047719640457",
            "id": "sgr-003cf68ca529aae27",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.variables_demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:047719640457:security-group-rule/sgr-0425623b818dc8e36",
            "cidr_ipv4": "118.10.10.118/32",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-0425623b818dc8e36",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-009539c0e32c8b9ed",
            "security_group_rule_id": "sgr-0425623b818dc8e36",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "047719640457",
            "id": "sgr-0425623b818dc8e36",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.variables_demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_tls",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:047719640457:security-group-rule/sgr-073b20c457abd7395",
            "cidr_ipv4": "118.10.10.118/32",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 443,
            "id": "sgr-073b20c457abd7395",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-009539c0e32c8b9ed",
            "security_group_rule_id": "sgr-073b20c457abd7395",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "047719640457",
            "id": "sgr-073b20c457abd7395",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.variables_demo"
          ]
        }
      ]
    }
  ]
}